# LibraryManager

./: .env  CMakeLists.txt  README.md  api_run  api_run.cpp  api_server.cpp  app.py  commands.txt  library_server  main  main.cpp  requirements.txt
data/: books.txt
features/: book.hpp  library.hpp
